--- a/CodeFront/codeFidelizame/index.html
+++ b/CodeFront/codeFidelizame/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/code.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   
+
     <title>CodeFidelizame</title>
+    <script src="https://widget.cloudinary.com/v2.0/global/all.js"></script>
   </head>
   <body>
     <div id="root"></div>
